--- a/src/__new/js/view/widgets/inputs/selectbox/SelectBox.css
+++ b/src/__new/js/view/widgets/inputs/selectbox/SelectBox.css
@@ -23,7 +23,7 @@
     width: 90%;
     margin: .1rem 0;
     padding: .4rem .5rem;
-    border: 1px solid #ccc;
+    border: 1px solid #bbb;
     line-height: 1rem;
 }
 
