--- a/src/__new/js/view/widgets/Widget.css
+++ b/src/__new/js/view/widgets/Widget.css
@@ -88,7 +88,7 @@
 
 .floater.open {
     display: block;
-    height: 24rem;
+    height: 26rem;
     z-index: 10000;
 }
 .floater.active {
@@ -120,7 +120,7 @@
 }
 
 .floater-footer {
-    border-top: 2px solid #ddd;
+    border-top: 2px solid #ccc;
     padding: .5rem;
     height: 3rem;
 }
