--- a/src/__new/js/view/widgets/inputs/checkbox/Checkbox.html
+++ b/src/__new/js/view/widgets/inputs/checkbox/Checkbox.html
@@ -1,5 +1,5 @@
 <div class="floater-row checkbox-row {{class}}" id="{{id}}" data-id="{{dataId}}">
     <a href="#">
-        <span class="checkbox-icon"></span><span class="checkbox-label">{{name}}</span>
+        <div class="checkbox-icon"></div><div class="checkbox-label">{{name}}</div>
     </a>
 </div>
