--- a/src/__new/js/view/tools/FeatureInfoTool/FeatureInfoWindow.html
+++ b/src/__new/js/view/tools/FeatureInfoTool/FeatureInfoWindow.html
@@ -4,5 +4,10 @@
 		<table>
 		</table>
 	</div>
+	<div class="feature-info-window-footer">
+		<div class="floater-row">
+			<div class="widget-button widget-button-export" id="export-feature-info-csv">Export to CSV</div>
+		</div>
+	</div>
 	<div class="overlay"></div>
 </div>
