--- a/src/__new/js/view/widgets/inputs/multiselectbox/MultiSelectBoxOptions.html
+++ b/src/__new/js/view/widgets/inputs/multiselectbox/MultiSelectBoxOptions.html
@@ -1,2 +1,2 @@
-<label for="{{id}}">{{item}}</label>
-<input type="checkbox" name="{{id}}" id="{{id}}">
+<label class="label-{{class}}" for="{{id}}">{{item}}</label>
+<input class="{{class}}" type="checkbox" name="{{id}}" id="{{id}}">
