--- a/src/css/project/urbis.css
+++ b/src/css/project/urbis.css
@@ -188,3 +188,15 @@
 .urbis .tool-window-body .checkbox-row input:checked + .slider-toggle {
     background-color: #ff7600;
 }
+
+/* multioptions */
+.urbis .widgets label.label-multiselect-select-all,
+.urbis .widgets label.label-multiselect-select-all:hover,
+.urbis .widgets label.label-multiselect-select-all.ui-state-active.ui-checkboxradio-checked {
+    color: rgba(255,118,0, .8);
+}
+
+.urbis .label-multiselect-select-all:before {
+    content: url("../../images/urbis/check-colored.png");
+    opacity: .8;
+}
