--- a/src/__new/js/view/widgets/EvaluationWidget/EvaluationWidget.css
+++ b/src/__new/js/view/widgets/EvaluationWidget/EvaluationWidget.css
@@ -46,8 +46,8 @@
 }
 #evaluation-confirm[disabled=disabled], #evaluation-unselect[disabled=disabled] {
     pointer-events: none;
-    color: #ccc;
-    background: #eee;
+    color: #bbb;
+    background: #e5e5e5;
 }
 
 .widget-button-export:before {
