--- a/src/__new/js/view/widgets/inputs/multiselectbox/MultiSelectBox.css
+++ b/src/__new/js/view/widgets/inputs/multiselectbox/MultiSelectBox.css
@@ -37,17 +37,26 @@
 	border: 0;
 	font-family: "Open sans", sans-serif;
 	font-weight: bold;
-	padding: .4rem .4rem .1rem 1.1rem;
+	font-size: .7rem;
+	padding: .2rem .4rem .1rem 1.1rem;
 }
 .widgets label.label-multiselect-select-all,
-.widgets label.label-multiselect-select-all:hover,
 .widgets label.label-multiselect-select-all.ui-state-active.ui-checkboxradio-checked {
+	font-size: .7rem;
 	color: rgba(201, 45, 66, .7);
+	transition: color .3s;
 }
 .widgets label.label-multiselect-clear-all,
-.widgets label.label-multiselect-clear-all:hover,
 .widgets label.label-multiselect-clear-all.ui-state-active.ui-checkboxradio-checked {
+	font-size: .7rem;
 	color: rgba(96, 96, 96, .7);
+	transition: color .3s;
+}
+.widgets label.label-multiselect-select-all:hover {
+	color: rgba(201, 45, 66, 1);
+}
+.widgets label.label-multiselect-clear-all:hover {
+	color: rgba(96, 96, 96, 1);
 }
 
 .label-multiselect-select-all:before, .label-multiselect-clear-all:before {
@@ -57,8 +66,16 @@
 .label-multiselect-select-all:before {
 	content: url("../../../../../img/check-colored.png");
 	opacity: .7;
+	transition: opacity .3s;
 }
 .label-multiselect-clear-all:before {
 	content: url("../../../../../img/uncheck.png");
 	opacity: .7;
+	transition: opacity .3s;
+}
+.label-multiselect-select-all:hover:before {
+	opacity: 1;
+}
+.label-multiselect-clear-all:hover:before {
+	opacity: 1;
 }
