--- a/src/__new/js/view/tools/FeatureInfoTool/FeatureInfoWindow.html
+++ b/src/__new/js/view/tools/FeatureInfoTool/FeatureInfoWindow.html
@@ -6,7 +6,7 @@
 	</div>
 	<div class="feature-info-window-footer">
 		<div class="floater-row">
-			<div class="widget-button widget-button-export" id="export-feature-info-csv">Export to CSV</div>
+			<div class="widget-button widget-button-export" id="export-feature-info-csv">Export to XLS</div>
 		</div>
 	</div>
 	<div class="overlay"></div>
