--- a/src/__new/js/view/widgets/EvaluationWidget/EvaluationWidgetFooter.html
+++ b/src/__new/js/view/widgets/EvaluationWidget/EvaluationWidgetFooter.html
@@ -4,5 +4,5 @@
 </div>
 <div class="floater-row">
 	<div class="widget-button widget-button-export" id="export-shp" disabled="disabled">Export to GeoJSON</div>
-	<div class="widget-button widget-button-export" id="export-csv" disabled="disabled">Export to CSV</div>
+	<div class="widget-button widget-button-export" id="export-csv" disabled="disabled">Export to XLS</div>
 </div>
