--- a/src/__new/styles/style.css
+++ b/src/__new/styles/style.css
@@ -61,7 +61,7 @@
 }
 
 .tools-buttons-container .tool {
-    background: rgba(255,255,255,.2);
+    background: rgba(255,255,255,.25);
     border: 1px solid rgba(255,255,255,.3);
     border-radius: .1rem;
     color: #ddd;
@@ -73,11 +73,11 @@
     margin: .5rem .2rem;
     text-align: center;
     text-transform: none;
-    transition: background .3s;
+    transition: background .3s ease-out;
     width: 3.5rem;
 }
 .tools-buttons-container .tool:hover {
-    background: rgba(255,255,255,.3);
+    background: rgba(255,255,255,.15);
     cursor: pointer;
 }
 .tools-buttons-container .tool.active {
