--- a/src/css/newDesign.css
+++ b/src/css/newDesign.css
@@ -168,10 +168,16 @@
 
 /* intro toolbar inputs */
 .newDesign #content-intro  .x-form-text, .newDesign #content-intro .x-form-trigger {
-    background: rgba(255,255,255,.2);
+    background-color: rgba(255,255,255,.2);
     border: 1px solid rgba(255,255,255,.3);
     height: 30px;
+    transition: background-color .3s ease-out;
 }
+/* intro toolbar inputs */
+.newDesign #content-intro table:hover .x-form-text, .newDesign #content-intro table:hover .x-form-trigger {
+    background-color: rgba(255,255,255,.15);
+}
+
 .newDesign #content-intro  .x-form-text {
     border-right-width: 0;
 }
@@ -285,10 +291,14 @@
 }
 
 .newDesign .app-toolbar-help .help-btn .x-btn {
-    background: rgba(255,255,255,.2);
-    border: 1px solid rgba(255,255,255,.3);
-    width: 23px;
-    height: 23px;
+     background-color: rgba(255,255,255,.25);
+     border: 1px solid rgba(255,255,255,.3);
+     width: 23px;
+     height: 23px;
+     transition: background-color .3s ease-out;
+ }
+.newDesign .app-toolbar-help .help-btn .x-btn:hover {
+    background-color: rgba(255,255,255,.15);
 }
 
 .newDesign #app-toolbar-contexthelp span.x-btn-icon {
@@ -397,8 +407,9 @@
 }
 
 .newDesign.x-border-box .x-form-trigger.x-form-refresh-trigger {
-    background           : rgba(255,255,255,.2) url("../images/new/refresh-white.png") no-repeat 50% 50% !important;
+    background           : rgba(255,255,255,.25) url("../images/new/refresh-white.png") no-repeat 50% 50% !important;
     border-left: 1px solid rgba(255,255,255,.3) !important;
+    transition: background .3s ease-out;
 }
 .newDesign.x-border-box .x-form-trigger.x-form-spinner-up {
     background           : #eee url("../images/new/collapse.png") no-repeat 50% 50%;
@@ -409,19 +420,26 @@
 .newDesign.x-border-box .custom-combo .x-form-text {
     border-radius: 1px 0 0 1px;
     color: #ddd;
-    background: rgba(255,255,255,.2);
+    background: rgba(255,255,255,.25);
     border: 1px solid rgba(255,255,255,.3);
     border-right: 0;
     font-size: 11px;
     font-weight: 700;
     height: 23px;
+    transition: background .3s ease-out;
 }
 .newDesign.x-border-box .custom-combo .x-form-trigger {
-    background: rgba(255,255,255,.2) url('../images/new/expand-white.png') no-repeat 50% 50%;;
+    background: rgba(255,255,255,.25) url('../images/new/expand-white.png') no-repeat 50% 50%;;
     border: 1px solid rgba(255,255,255,.3);
     border-left: 0;
     border-radius: 0 1px 1px 0;
     height: 23px;
+    transition: background .3s ease-out;
+}
+.newDesign.x-border-box .custom-combo:hover .x-form-text,
+.newDesign.x-border-box .custom-combo:hover .x-form-trigger,
+.newDesign.x-border-box .custom-combo:hover .x-form-trigger.x-form-refresh-trigger {
+    background-color: rgba(255,255,255,.15) !important;
 }
 .newDesign.x-border-box .x-tbar-page-number .x-form-text {
     border: 1px solid #aaa;
@@ -613,8 +631,15 @@
     color: #fff;
 }
 .newDesign .x-btn.custom-button.x-btn-default-small {
-    background: rgba(255,255,255,.2);
+    background: rgba(255,255,255,.25);
     border: 1px solid rgba(255,255,255,.3);
+    transition: background-color .3s ease-out;
+}
+.newDesign .x-btn.custom-button.x-btn-default-small:hover {
+    background: rgba(255,255,255,.15);
+}
+.newDesign .x-btn.custom-button.x-btn-default-small.x-disabled {
+    pointer-events: none;
 }
 .newDesign .x-btn.custom-button.btn-confirm {
     background: rgba(201,45,66,.7);
@@ -818,6 +843,7 @@
     background           : #eee;
     color                : #333;
     padding: 3px 5px;
+    transition: background .3s ease-out;
 }
 
 .newDesign .x-boundlist.custom-combo-list .x-boundlist-item:hover,
