--- a/src/__new/js/view/tools/FeatureInfoTool/FeatureInfoWindow.css
+++ b/src/__new/js/view/tools/FeatureInfoTool/FeatureInfoWindow.css
@@ -10,6 +10,8 @@
 	padding: .3rem 0 .3rem .5rem;
 	position: absolute;
 	right: 100px;
+	resize: both;
+	overflow: auto;
 	width: 18rem;
 	z-index: 9999;
 }
@@ -25,7 +27,7 @@
 	margin: 0 .2rem .2rem 0;
 	overflow-x: hidden;
 	overflow-y: auto;
-	height: calc(100% - 3.5rem);
+	height: calc(100% - 3.7rem);
 }
 #feature-info-window .feature-info-window-footer {
 	border-top: 2px solid #ddd;
