--- a/src/__new/js/view/widgets/EvaluationWidget/EvaluationWidget.css
+++ b/src/__new/js/view/widgets/EvaluationWidget/EvaluationWidget.css
@@ -7,10 +7,11 @@
     left: 16rem;
     top: 10rem;
     min-width: 22rem;
+    max-width: 40rem;
 }
 
 #floater-evaluation-widget .floater-body {
-    height: calc(100% - 7rem);
+    height: calc(100% - 7.5rem);
     padding: 0 0 .5rem;
 }
 
