feature info close button

--- a/src/__new/js/view/tools/FeatureInfoTool/FeatureInfoWindow.html
+++ b/src/__new/js/view/tools/FeatureInfoTool/FeatureInfoWindow.html
@@ -1,5 +1,10 @@
 <div id="{{id}}">
-	<div class="feature-info-window-header">Feature name (GID)</div>
+	<div class="feature-info-window-header">
+		<div class="feature-info-title">Feature name (GID)</div>
+		<div class="feature-info-close">
+			<img title="close-button" src="__new/img/close.png">
+		</div>
+	</div>
 	<div class="feature-info-window-body">
 		<table>
 		</table>
