--- a/src/__new/js/view/tools/FeatureInfoTool/FeatureInfoWindow.css
+++ b/src/__new/js/view/tools/FeatureInfoTool/FeatureInfoWindow.css
@@ -12,16 +12,26 @@
 	right: 100px;
 	resize: both;
 	overflow: auto;
-	width: 18rem;
+	min-width: 20rem;
+	width: 25rem;
+	max-width: 40rem;
 	z-index: 9999;
 }
 #feature-info-window .feature-info-window-header {
 	border-bottom: 2px solid #ddd;
 	font-size: .85rem;
 	font-weight: 700;
-	padding: 0 .4rem .2rem .1rem;
+	padding: 0 0 .2rem .1rem;
 	margin-right: .2rem;
 	height: 1.5rem;
+}
+#feature-info-window .feature-info-title {
+	float: left;
+}
+#feature-info-window .feature-info-close {
+	cursor: pointer;
+	float: right;
+	width: 18px;
 }
 #feature-info-window .feature-info-window-body {
 	margin: 0 .2rem .2rem 0;
