--- a/src/__new/js/view/widgets/CustomPolygonsWidget/CustomPolygonsWidgetBody.html
+++ b/src/__new/js/view/widgets/CustomPolygonsWidget/CustomPolygonsWidgetBody.html
@@ -1,4 +1,6 @@
 <div class="floater-row">
 	<div class="floater-row-caption">Draw custom Analytical units</div>
-	<div class="widget-button map-button" id="button-draw-polygons">Actviate AU drawing</div>
+	<div class="widget-button map-button" id="button-draw-polygons">Actviate drawing</div>
+	<div class="widget-button map-button" id="button-clear-polygons" disabled="disabled">Clear</div>
+	<div class="widget-button map-button" id="button-save-polygons" disabled="disabled">Save and send</div>
 </div>
