table for custom AU, draw end listener

--- a/src/__new/js/view/widgets/CustomPolygonsWidget/CustomPolygonsWidgetBody.html
+++ b/src/__new/js/view/widgets/CustomPolygonsWidget/CustomPolygonsWidgetBody.html
@@ -4,3 +4,6 @@
 	<div class="widget-button map-button" id="button-clear-polygons" disabled="disabled">Clear</div>
 	<div class="widget-button map-button" id="button-save-polygons" disabled="disabled">Save and send</div>
 </div>
+<div class="floater-row">
+	<div id="{{id}}-table-container"></div>
+</div>
