drawing of customs au disabled for all places

--- a/src/__new/js/view/widgets/CustomPolygonsWidget/DrawCustomAU.html
+++ b/src/__new/js/view/widgets/CustomPolygonsWidget/DrawCustomAU.html
@@ -1,9 +1,14 @@
-<div class="floater-row">
-	<div class="floater-row-caption">Draw custom Analytical units</div>
-	<div class="widget-button map-button" id="button-draw-polygons">Actviate drawing</div>
-	<div class="widget-button map-button" id="button-clear-polygons" disabled="disabled">Clear all</div>
-	<div class="widget-button map-button" id="button-save-polygons" disabled="disabled">Save and send</div>
+<div id="custom-au-container">
+	<div class="floater-row">
+		<div class="floater-row-caption">Draw custom Analytical units</div>
+		<div class="widget-button map-button" id="button-draw-polygons">Actviate drawing</div>
+		<div class="widget-button map-button" id="button-clear-polygons" disabled="disabled">Clear all</div>
+		<div class="widget-button map-button" id="button-save-polygons" disabled="disabled">Save and send</div>
+	</div>
+	<div class="floater-row">
+		<div id="{{id}}-table-container"></div>
+	</div>
 </div>
-<div class="floater-row">
-	<div id="{{id}}-table-container"></div>
+<div id="custom-au-info">
+	<p>Drawing of custom analytical units is disabled for All places option.</p>
 </div>
