--- a/src/__new/js/view/widgets/CustomDrawingWidget/CustomDrawingWidget.css
+++ b/src/__new/js/view/widgets/CustomDrawingWidget/CustomDrawingWidget.css
@@ -5,16 +5,27 @@
 	min-width: 15rem;
 	width: 23rem;
 	max-width: 30rem;
-	height: 16rem;
+	height: 18rem;
 }
 
 #floater-custom-polygons-widget .floater-body {
 	height: calc(100% - 2rem);
-	padding: .5rem;
+	padding: 0 0 .5rem;
 }
 
 #floater-custom-polygons-widget .floater-body .floater-row {
 	margin: .5rem 0;
+}
+
+#floater-custom-polygons-widget .floater-body > div {
+	padding: .5rem;
+}
+
+#floater-custom-polygons-widget .floater-body > div:nth-child(even){
+	padding: .5rem;
+	background: rgba(200,200,200,.1);
+	border-bottom: 1px solid #e5e5e5;
+	border-top: 1px solid #e5e5e5;
 }
 
 #floater-custom-polygons-widget .map-button {
