only one drawing type can be activated at the same time

--- a/src/__new/js/view/widgets/CustomDrawingWidget/DrawCustomLines.html
+++ b/src/__new/js/view/widgets/CustomDrawingWidget/DrawCustomLines.html
@@ -1,7 +1,7 @@
 <div id="custom-lines-container">
 	<div class="floater-row">
 		<div class="floater-row-caption">Draw custom lines</div>
-		<div class="widget-button map-button" id="button-draw-lines">Actviate drawing</div>
+		<div class="widget-button map-button button-drawing-activation" id="button-draw-lines">Actviate drawing</div>
 		<div class="widget-button map-button" id="button-clear-lines" disabled="disabled">Clear all</div>
 		<div class="widget-button map-button" id="button-save-lines" disabled="disabled">Save and send</div>
 	</div>
