--- a/src/__new/js/view/widgets/CustomDrawingWidget/DrawCustomAU.html
+++ b/src/__new/js/view/widgets/CustomDrawingWidget/DrawCustomAU.html
@@ -1,7 +1,7 @@
 <div id="custom-au-container">
 	<div class="floater-row">
 		<div class="floater-row-caption">Draw custom Analytical units</div>
-		<div class="widget-button map-button" id="button-draw-polygons">Actviate drawing</div>
+		<div class="widget-button map-button button-drawing-activation" id="button-draw-polygons">Actviate drawing</div>
 		<div class="widget-button map-button" id="button-clear-polygons" disabled="disabled">Clear all</div>
 		<div class="widget-button map-button" id="button-save-polygons" disabled="disabled">Save and send</div>
 	</div>
