custom lines: info if All places selected

--- a/src/__new/js/view/widgets/CustomDrawingWidget/DrawCustomAU.html
+++ b/src/__new/js/view/widgets/CustomDrawingWidget/DrawCustomAU.html
@@ -10,5 +10,5 @@
 	</div>
 </div>
 <div id="custom-au-info">
-	<p>Drawing of custom analytical units is disabled for All places option.</p>
+	<p>Drawing of custom analytical units is disabled for All places option. To enable drawing, please select place(pilot).</p>
 </div>
