--- a/src/__new/js/view/widgets/CustomDrawingWidget/DrawCustomLines.html
+++ b/src/__new/js/view/widgets/CustomDrawingWidget/DrawCustomLines.html
@@ -9,3 +9,6 @@
 		<div id="{{id}}-table-container"></div>
 	</div>
 </div>
+<div id="custom-lines-info">
+	<p>Drawing of custom lines is disabled for All places option. To enable drawing, please select place(pilot).</p>
+</div>
