custom lines - show lines in map

--- a/src/__new/js/view/widgets/CustomDrawingWidget/DrawCustomLines.html
+++ b/src/__new/js/view/widgets/CustomDrawingWidget/DrawCustomLines.html
@@ -1,6 +1,6 @@
 <div id="custom-lines-container">
 	<div class="floater-row">
-		<div class="floater-row-caption">Draw custom lines</div>
+		<div class="floater-row-caption">Draw Green Connectivity Line</div>
 		<div class="widget-button map-button button-drawing-activation" id="button-draw-lines">Actviate drawing</div>
 	</div>
 	<div class="floater-row">
