custom features widget tabs

--- a/src/__new/js/view/widgets/CustomDrawingWidget/CustomDrawingWidgetBody.html
+++ b/src/__new/js/view/widgets/CustomDrawingWidget/CustomDrawingWidgetBody.html
@@ -1,6 +1,18 @@
-<div id="{{id}}-draw-polygons">
+<ul id="{{id}}-menu" class="widget-tabs-menu vertical">
+	<li class="widget-tab-title active" id="{{id}}-draw-lines-tab">
+		<a data-target="{{id}}-draw-lines">
+			A
+		</a>
+	</li>
+	<li class="widget-tab-title" id="{{id}}-draw-polygons-tab">
+		<a data-target="{{id}}-draw-polygons">
+			B
+		</a>
+	</li>
+</ul>
+<div class="widget-tab vertical active" id="{{id}}-draw-lines">
 
 </div>
-<div id="{{id}}-draw-lines">
+<div class="widget-tab vertical" id="{{id}}-draw-polygons">
 
 </div>
