--- a/src/__new/js/view/widgets/CustomDrawingWidget/CustomDrawingWidget.css
+++ b/src/__new/js/view/widgets/CustomDrawingWidget/CustomDrawingWidget.css
@@ -10,22 +10,15 @@
 
 #floater-custom-polygons-widget .floater-body {
 	height: calc(100% - 2rem);
-	padding: 0 0 .5rem;
+	padding: .5rem .4rem .5rem .2rem;
 }
 
 #floater-custom-polygons-widget .floater-body .floater-row {
-	margin: .5rem 0;
+	margin: 0 0 .5rem 0;
 }
 
 #floater-custom-polygons-widget .floater-body > div {
 	padding: .5rem;
-}
-
-#floater-custom-polygons-widget .floater-body > div:nth-child(even){
-	padding: .5rem;
-	background: rgba(200,200,200,.1);
-	border-bottom: 1px solid #e5e5e5;
-	border-top: 1px solid #e5e5e5;
 }
 
 #floater-custom-polygons-widget .map-button {
