--- a/src/__new/js/view/widgets/Widget.css
+++ b/src/__new/js/view/widgets/Widget.css
@@ -159,3 +159,120 @@
 .floater-tool:hover {
     cursor: pointer;
 }
+
+/* tabs */
+/* ===== Tabs ===== */
+.widget-tabs-menu {
+    height: 2rem;
+    float: left;
+    clear: both;
+}
+
+.widget-tabs-menu.vertical {
+    height: auto;
+    width: 2rem;
+}
+
+.widget-tabs-menu li {
+    height: 2.1rem;
+    line-height: 2.1rem;
+    float: left;
+    margin-right: .5rem;
+    background-color: #eee;
+}
+.widget-tabs-menu.horizontal li {
+    border-top: 2px solid #ccc;
+    border-right: 2px solid #ccc;
+    border-left: 2px solid #ccc;
+    border-radius: .2rem .2rem 0 0;
+}
+
+.widget-tabs-menu.vertical li {
+    border-top: 2px solid #ccc;
+    border-bottom: 2px solid #ccc;
+    border-left: 2px solid #ccc;
+    border-radius: .2rem 0 0 .2rem;
+    margin-bottom: .3rem;
+    width: 2.1rem;
+    height: 2.5rem;
+    text-align: center;
+}
+
+.widget-tabs-menu li.active {
+    position: relative;
+    background-color: #f9f9f9;
+    z-index: 5;
+}
+.widget-tabs-menu.horizontal li.active {
+    border-bottom: 1px solid #fff;
+}
+.widget-tabs-menu.vertical li.active {
+}
+
+.widget-tabs-menu li a {
+    padding: .4rem 1rem;
+    text-transform: uppercase;
+    font-size: .9rem;
+    font-family: Corbel Bold, Open Sans, sans-serif;
+    color: #888;
+    text-decoration: none;
+    transition: background .3s ease-out;
+}
+
+.widget-tabs-menu.vertical li a {
+    padding: .2rem .5rem;
+    display: block;
+    height: 100%;
+    cursor: pointer;
+}
+
+.widget-tabs-menu li.active a {
+    color: rgb(21, 180, 202);
+}
+
+.widget-tabs-menu li.active a:focus, .tabs-menu li.active a:active{
+    background-color: transparent;
+}
+
+.widget-tabs-menu .disabled a {
+    color: #ccc;
+    pointer-events: none;
+    cursor: default;
+}
+
+.widget-tabs-menu .disabled a:hover {
+    color: inherit;
+}
+
+.widget-tabs-menu .fa:before, .tabs-menu .fa:after {
+    font-size: 1rem;
+}
+
+.widget-tab {
+    border: 2px solid #ccc;
+    border-radius: 0 .2rem .2rem;
+    background-color: #f9f9f9;
+    display: none;
+    float: left;
+    padding: .5rem;
+    width: 100%;
+    height: 100%;
+}
+
+.widget-tab.vertical {
+    width: calc(100% - 2rem);
+}
+
+.widget-tab.active {
+    display: block;
+}
+
+.widget-tab p {
+    margin: .2rem 0;
+    font-size: .9rem;
+}
+
+.widget-tab span {
+    margin: .2rem 0;
+    font-size: .9rem;
+}
