--- a/src/__new/js/view/widgets/Widget.css
+++ b/src/__new/js/view/widgets/Widget.css
@@ -169,8 +169,11 @@
 }
 
 .widget-tabs-menu.vertical {
-    height: auto;
+    height: 100%;
     width: 2rem;
+    background: #ddd;
+    border: 2px solid #e7e7e7;
+    border-right: 0;
 }
 
 .widget-tabs-menu li {
@@ -178,29 +181,21 @@
     line-height: 2.1rem;
     float: left;
     margin-right: .5rem;
-    background-color: #eee;
 }
 .widget-tabs-menu.horizontal li {
-    border-top: 2px solid #ccc;
-    border-right: 2px solid #ccc;
-    border-left: 2px solid #ccc;
     border-radius: .2rem .2rem 0 0;
 }
 
 .widget-tabs-menu.vertical li {
-    border-top: 2px solid #ccc;
-    border-bottom: 2px solid #ccc;
-    border-left: 2px solid #ccc;
-    border-radius: .2rem 0 0 .2rem;
     margin-bottom: .3rem;
-    width: 2.1rem;
+    width: 2rem;
     height: 2.5rem;
     text-align: center;
 }
 
 .widget-tabs-menu li.active {
     position: relative;
-    background-color: #f9f9f9;
+    background-color: white;
     z-index: 5;
 }
 .widget-tabs-menu.horizontal li.active {
@@ -227,7 +222,7 @@
 }
 
 .widget-tabs-menu li.active a {
-    color: rgb(21, 180, 202);
+    color: #888;
 }
 
 .widget-tabs-menu li.active a:focus, .tabs-menu li.active a:active{
@@ -249,14 +244,13 @@
 }
 
 .widget-tab {
-    border: 2px solid #ccc;
-    border-radius: 0 .2rem .2rem;
-    background-color: #f9f9f9;
+    border: 2px solid #e7e7e7;
+    border-left: 0;
     display: none;
     float: left;
     padding: .5rem;
     width: 100%;
-    height: 100%;
+    min-height: 100%;
 }
 
 .widget-tab.vertical {
