custom features widget - polygons tab

--- a/src/__new/js/view/widgets/CustomDrawingWidget/DrawCustomAU.html
+++ b/src/__new/js/view/widgets/CustomDrawingWidget/DrawCustomAU.html
@@ -8,5 +8,8 @@
 	</div>
 </div>
 <div id="custom-au-info">
-	<p>Drawing of custom analytical units is disabled for All places option. To enable drawing, please select place(pilot).</p>
+	<div class="floater-row">
+		<div class="floater-row-caption">Draw custom Analytical units</div>
+		<p></p>
+	</div>
 </div>
