--- a/src/__new/js/view/widgets/CustomDrawingWidget/DrawCustomAU.html
+++ b/src/__new/js/view/widgets/CustomDrawingWidget/DrawCustomAU.html
@@ -1,4 +1,6 @@
 <div id="custom-au-container">
+	<div class="floater-row layer-check">
+	</div>
 	<div class="floater-row">
 		<div class="floater-row-caption">Draw custom Analytical units</div>
 		<div class="widget-button map-button button-drawing-activation" id="button-draw-polygons">Actviate drawing</div>
