--- a/src/__new/js/view/table/Table.css
+++ b/src/__new/js/view/table/Table.css
@@ -1,5 +1,4 @@
 .new-table {
-	border: 1px solid #ccc;
 	padding: 0 .2rem;
 	width: 95%;
 }
@@ -8,14 +7,25 @@
 	padding: 0 .3rem;
 	min-width: 2rem;
 	line-height: 2rem;
-	border-bottom: 1px solid #ccc;
+	border-bottom: 1px solid #ddd;
+	background: rgba(255,255,255,.7);
 }
 .new-table tr th {
 	color: #888;
 	font-weight: 700;
 	background: #ddd;
 	line-height: 1.5rem;
+	border-top: 1px solid #ccc;
+	border-bottom: 1px solid #ccc;
 }
-.new-table tr:last-child td {
-	border-bottom: 0;
+.new-table tr th:first-child {
+	padding-left: .5rem;
 }
+.new-table tr td:first-child {
+	padding-left: .5rem;
+}
+.new-table input[disabled="disabled"] {
+	border: 0;
+	background: transparent;
+}
+
