--- a/src/css/project/urbis.css
+++ b/src/css/project/urbis.css
@@ -116,14 +116,20 @@
 /* Common features */
 .urbis .widget-button {
     background: #ff7600;
+    border-bottom: 3px solid #d35400;
 }
 .urbis .widget-button[disabled=disabled] {
     pointer-events: none;
     color: #bbb;
     background-color: #e5e5e5;
+    border-bottom: 3px solid #ddd;
 }
-.urbis .widget-button:hover, .urbis .widget-button.active {
+.urbis .widget-button:hover {
     background: #d35400;
+}
+.urbis .widget-button.active {
+    background: #d35400;
+    border-bottom: 3px solid #ff7600;
 }
 
 /* Widget */
@@ -163,6 +169,7 @@
 /* footer export buttons */
 .urbis .widget-button-export {
     background: none;
+    border: 0;
     color: #ff7600;
 }
 .urbis .widget-button-export:hover {
@@ -172,6 +179,7 @@
 .urbis .widget-button-export[disabled=disabled] {
     pointer-events: none;
     background: transparent;
+    border: 0;
     color: #aaa;
 }
 .urbis .widget-button-export[disabled=disabled]:hover {
