--- a/src/__new/js/view/widgets/CustomDrawingWidget/DrawCustomAU.html
+++ b/src/__new/js/view/widgets/CustomDrawingWidget/DrawCustomAU.html
@@ -8,6 +8,10 @@
 	<div class="floater-row">
 		<div id="{{id}}-table-container"></div>
 	</div>
+	<div class="floater-row">
+		<div class="widget-button widget-button-export" id="polygons-export-shp" disabled="disabled">Export layer to GeoJSON</div>
+		<div class="widget-button widget-button-export" id="polygons-export-csv" disabled="disabled">Export layer to XLS</div>
+	</div>
 </div>
 <div id="custom-au-info">
 	<div class="floater-row">
