--- a/src/__new/js/view/widgets/CustomDrawingWidget/DrawCustomLines.html
+++ b/src/__new/js/view/widgets/CustomDrawingWidget/DrawCustomLines.html
@@ -8,6 +8,10 @@
 	<div class="floater-row">
 		<div id="{{id}}-table-container"></div>
 	</div>
+	<div class="floater-row">
+		<div class="widget-button widget-button-export" id="lines-export-shp" disabled="disabled">Export layer to GeoJSON</div>
+		<div class="widget-button widget-button-export" id="lines-export-csv" disabled="disabled">Export layer to XLS</div>
+	</div>
 </div>
 <div id="custom-lines-info">
 	<p>Drawing of custom lines is disabled for All places option. To enable drawing, please select place(pilot).</p>
