--- a/src/__new/js/view/widgets/CustomDrawingWidget/DrawCustomAU.html
+++ b/src/__new/js/view/widgets/CustomDrawingWidget/DrawCustomAU.html
@@ -1,16 +1,16 @@
 <div id="custom-au-container">
 	<div class="floater-row layer-check">
 	</div>
+	<div class="floater-row export-row">
+		<div class="widget-button widget-button-export" id="polygons-export-shp" disabled="disabled">Export layer to GeoJSON</div>
+		<div class="widget-button widget-button-export" id="polygons-export-csv" disabled="disabled">Export layer to XLS</div>
+	</div>
 	<div class="floater-row">
 		<div class="floater-row-caption">Draw custom Analytical units</div>
 		<div class="widget-button map-button button-drawing-activation" id="button-draw-polygons">Actviate drawing</div>
 	</div>
 	<div class="floater-row">
 		<div id="{{id}}-table-container"></div>
-	</div>
-	<div class="floater-row">
-		<div class="widget-button widget-button-export" id="polygons-export-shp" disabled="disabled">Export layer to GeoJSON</div>
-		<div class="widget-button widget-button-export" id="polygons-export-csv" disabled="disabled">Export layer to XLS</div>
 	</div>
 </div>
 <div id="custom-au-info">
