--- a/src/__new/js/view/widgets/CustomDrawingWidget/CustomDrawingWidget.css
+++ b/src/__new/js/view/widgets/CustomDrawingWidget/CustomDrawingWidget.css
@@ -37,6 +37,9 @@
 	text-align: center;
 }
 
+#lines-export-csv, #polygons-export-csv {
+	display: none;
+}
 #lines-export-shp:before, #polygons-export-shp:before {
 	content: url('../../../../img/map.png');
 }
