--- a/src/__new/js/view/widgets/CustomDrawingWidget/CustomDrawingWidgetBody.html
+++ b/src/__new/js/view/widgets/CustomDrawingWidget/CustomDrawingWidgetBody.html
@@ -1,12 +1,12 @@
 <ul id="{{id}}-menu" class="widget-tabs-menu vertical">
 	<li class="widget-tab-title active" id="{{id}}-draw-lines-tab">
 		<a data-target="{{id}}-draw-lines">
-			<img alt="draw-line" src="../src/__new/img/draw-line.png">
+			<img alt="draw-line" src="__new/img/draw-line.png">
 		</a>
 	</li>
 	<li class="widget-tab-title" id="{{id}}-draw-polygons-tab">
 		<a data-target="{{id}}-draw-polygons">
-			<img alt="draw-polygon" src="../src/__new/img/draw-polygon.png">
+			<img alt="draw-polygon" src="__new/img/draw-polygon.png">
 		</a>
 	</li>
 </ul>
