--- a/src/__new/js/view/widgets/CustomDrawingWidget/CustomDrawingWidget.css
+++ b/src/__new/js/view/widgets/CustomDrawingWidget/CustomDrawingWidget.css
@@ -37,18 +37,10 @@
 	text-align: center;
 }
 
-#lines-export-csv, #polygons-export-csv {
-	display: none;
-}
-#lines-export-shp:before, #polygons-export-shp:before {
+#lines-export-shp:before, #polygons-export-shp:before, #lines-export-json:before, #polygons-export-json:before {
 	content: url('../../../../img/map.png');
 }
-#lines-export-shp[disabled=disabled]:before, #polygons-export-shp[disabled=disabled]:before {
+#lines-export-shp[disabled=disabled]:before, #polygons-export-shp[disabled=disabled]:before,
+#lines-export-json[disabled=disabled]:before, #polygons-export-json[disabled=disabled]:before {
 	content: url('../../../../img/map-disabled.png');
-}
-#lines-export-csv:before, #polygons-export-csv:before {
-	content: url('../../../../img/table.png');
-}
-#lines-export-csv[disabled=disabled]:before, #polygons-export-csv[disabled=disabled]:before {
-	content: url('../../../../img/table-disabled.png');
 }
