--- a/src/__new/js/view/widgets/CustomDrawingWidget/DrawCustomLines.html
+++ b/src/__new/js/view/widgets/CustomDrawingWidget/DrawCustomLines.html
@@ -2,8 +2,8 @@
 	<div class="floater-row layer-check">
 	</div>
 	<div class="floater-row export-row">
-		<div class="widget-button widget-button-export" id="lines-export-shp" disabled="disabled">Export layer to GeoJSON</div>
-		<div class="widget-button widget-button-export" id="lines-export-csv" disabled="disabled">Export layer to XLS</div>
+		<div class="widget-button widget-button-export" id="lines-export-json" disabled="disabled">Export layer to GeoJSON</div>
+		<div class="widget-button widget-button-export" id="lines-export-shp" disabled="disabled">Export layer to SHP</div>
 	</div>
 	<div class="floater-row">
 		<div class="floater-row-caption">Draw Green Connectivity Line</div>
