--- a/src/__new/js/view/widgets/EvaluationWidget/EvaluationWidgetFooter.html
+++ b/src/__new/js/view/widgets/EvaluationWidget/EvaluationWidgetFooter.html
@@ -2,7 +2,11 @@
 	<div class="widget-button" id="evaluation-confirm"></div>
 	<div class="widget-button" id="evaluation-unselect" disabled="disabled">Clear selection</div>
 </div>
-<div class="floater-row">
-	<div class="widget-button widget-button-export" id="export-shp" disabled="disabled">Export to GeoJSON</div>
-	<div class="widget-button widget-button-export" id="export-csv" disabled="disabled">Export to XLS</div>
+<div class="floater-row row-export">
+	<div class="widget-button widget-button-export" id="export-json" disabled="disabled">Export to GeoJSON</div>
+	<div class="widget-button widget-button-export" id="export-xls" disabled="disabled">Export to XLS</div>
+</div>
+<div class="floater-row row-export">
+	<div class="widget-button widget-button-export" id="export-shp" disabled="disabled">Export to SHP</div>
+	<div class="widget-button widget-button-export" id="export-csv" disabled="disabled">Export to CSV</div>
 </div>
