--- a/src/__new/js/view/worldWind/WorldWindMap.css
+++ b/src/__new/js/view/worldWind/WorldWindMap.css
@@ -1,10 +1,16 @@
 body.application #world-wind-container {
 	display: none;
 
-	background: rgba(255,0,0,.3);
+	background: black url("../../../img/night-sky.jpg") top left no-repeat;
+	background-size: cover;
 	position: absolute;
 	top: 135px;
-	height: 100%;
+	height: calc(100% - 135px);
 	width: 100%;
-	z-index: 999;
+	z-index: 5555;
+}
+
+#world-wind-canvas {
+	width: 100%;
+	height: 100%;
 }
